# Hiyokoman

./: .mcp.json  CLAUDE.md  Hiyokoman.html  Hiyokoman.pyxapp  README.md  build_pyxapp.py  hiyokoman_py.pyxapp
hiyokoman_py/: main.py  pyproject.toml
hiyokoman_py/assets/: opening_bg.pyxres
hiyokoman_py/src/hiyokoman/: __main__.py  assets.py  audio.py  constants.py  game_state.py  map_data.py  renderer.py  scene_manager.py
hiyokoman_py/src/hiyokoman/entities/: base.py  castle.py  drop_item.py  hiyoko.py  hiyoko_map.py  key.py  monster.py  nest.py  weapon.py
hiyokoman_py/src/hiyokoman/scenes/: base.py  battle.py  clear.py  gameover.py  opening.py  transform.py
