[project]
name = "hiyokoman"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyxel>=2.0",
    "pillow>=10.0",
    "numpy>=1.26",
    "pygame-ce>=2.4",
]

[project.scripts]
hiyokoman = "hiyokoman.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hiyokoman"]
